tried to fix overflow-x in mobile

--- a/itu_rover/static/css/base.css
+++ b/itu_rover/static/css/base.css
@@ -8,8 +8,9 @@ html{
 	height:100%;
 }
 body{
+	position: relative;
+	overflow: hidden;
 	height:100%;
-	overflow-x: hidden;
 }
 
 .content{
